<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.boshanam.diarymgmt.RateEntryActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="3dp"
        android:paddingTop="5dp"
        android:theme="@style/AppTheme"
        android:visibility="visible">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:layout_marginBottom="0dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/milk_prompt"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/milk_type"
            style="@style/formFieldsStyle"
            android:layout_height="70dp"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:entries="@array/milk_type" />

        <RelativeLayout
            style="@style/formFieldsStyle"
            android:layout_marginTop="0dp"
            >

            <EditText
                android:id="@+id/fat"
                style="@style/formFieldsStyle"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="10dp"
                android:layout_width="100dp"
                android:hint="@string/fat"
                android:inputType="number|numberDecimal" />

            <EditText
                android:id="@+id/rate"
                style="@style/formFieldsStyle"
                android:layout_marginLeft="0dp"
                android:layout_width="100dp"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@id/fat"
                android:layout_toRightOf="@id/fat"
                android:hint="@string/rate"
                android:inputType="number|numberDecimal" />

            <Button
                android:id="@+id/next"
                style="@style/formButtonStyle"
                android:layout_marginLeft="0dp"
                android:layout_width="100dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/rate"
                android:layout_toRightOf="@id/rate"
                android:text="@string/next"
                android:textSize="20sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/finish"
            style="@style/formButtonStyle"
            android:text="@string/finish" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
