<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.boshanam.diarymgmt.MainMenuActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:gravity="center_vertical|center"
        android:orientation="vertical"
        android:paddingBottom="3dp"
        android:paddingTop="5dp"
        android:theme="@style/AppTheme"
        android:visibility="visible">

        <Button
            android:id="@+id/farmerRegister"
            style="?android:attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal|center"
            android:layout_margin="5dp"

            android:background="#006699"
            android:text="@string/farmer_register"
            android:textColor="#fff"
            android:textSize="30sp"

            android:textStyle="normal"
            android:visibility="visible" />

        <Button
            android:id="@+id/rateEntry"
            style="?android:attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal|center"
            android:layout_margin="5dp"

            android:background="#006699"
            android:text="@string/rate_entry"
            android:textColor="#fff"
            android:textSize="30sp"

            android:textStyle="normal"
            android:visibility="visible" />

        <Button
            android:id="@+id/milkCollect"
            style="?android:attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal|center"

            android:adjustViewBounds="true"
            android:background="#006699"
            android:scaleType="centerInside"
            android:text="@string/collect_milk"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="normal"
            android:visibility="visible" />

        <Button
            android:id="@+id/fatEntry"
            style="?android:attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal|center"

            android:background="#006699"
            android:text="@string/fat_entry"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="normal"

            android:visibility="visible" />

        <Button
            android:id="@+id/paymentReport"
            style="?android:attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal|center"

            android:background="#006699"
            android:text="@string/payment_reports"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="normal"

            android:visibility="visible" />

    </LinearLayout>



</android.support.constraint.ConstraintLayout>
