<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.boshanam.diarymgmt.DateShiftSelectActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="3dp"
        android:paddingTop="5dp"
        android:theme="@style/AppTheme"
        android:visibility="visible">

        <LinearLayout
            style="@style/formFieldsVerticalFlowStyle"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal|center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/collect_milk_date"
                style="@style/formFieldsVerticalFlowStyle"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/collect_milk_shift"
                style="@style/formFieldsVerticalFlowStyle"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            style="@style/formFieldsVerticalFlowStyle"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal|center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/collect_farmer_id"
                style="@style/formFieldsHorizontalFlowStyle"
                android:hint="@string/farmer_id"
                android:inputType="number|numberDecimal" />

            <Button
                android:id="@+id/collect_milk_search"
                style="@style/formButtonStyle"
                android:layout_width="0dp"
                android:layout_gravity="center_horizontal|center_vertical|center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/search" />
        </LinearLayout>

        <LinearLayout
            style="@style/formFieldsVerticalFlowStyle"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal|center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/collect_sample_id"
                style="@style/formFieldsHorizontalFlowStyle"
                android:layout_marginRight="5dp"
                android:hint="@string/sample_id"
                android:inputType="number"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/collect_milk"
                style="@style/formFieldsHorizontalFlowStyle"
                android:layout_marginLeft="0dp"
                android:hint="@string/collect_milk"
                android:inputType="number|numberDecimal"
                android:textSize="20sp" />

            <Button
                android:id="@+id/collect_save"
                style="@style/formButtonStyle"
                android:layout_width="0dp"
                android:layout_gravity="center_horizontal|center_vertical|center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>



