<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.shiva.myapplication.FormerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:gravity="center_vertical|center"
        android:orientation="vertical"
        android:paddingBottom="3dp"
        android:paddingTop="5dp"
        android:theme="@style/AppTheme"


        android:visibility="visible"

        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_farmer_id"
            android:layout_width="280dp"
            android:layout_height="50dp">

            <EditText

                android:id="@+id/generateId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:ems="10"
                android:hint="@string/farmer_id"
                android:inputType="text"
                android:singleLine="true"
                android:textColorHint="#000"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="112dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_farmer_name"
            android:layout_width="280dp"
            android:layout_height="50dp">

            <EditText
                android:id="@+id/farmerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:ems="10"
                android:hint="@string/farmer_name"
                android:inputType="text"
                android:singleLine="true"
                android:textColorHint="#000"
                tools:layout_editor_absoluteX="51dp"
                tools:layout_editor_absoluteY="196dp" />
        </android.support.design.widget.TextInputLayout>


        <!--  <AutoCompleteTextView
              android:id="@+id/type_milk"
              android:layout_width="280dp"
              android:layout_height="50dp"
              android:hint="@string/milk_type"
              android:textColorHint="#fff"
              android:ems="10"

              tools:layout_editor_absoluteX="49dp"
              tools:layout_editor_absoluteY="284dp">
              <requestFocus />


          </AutoCompleteTextView>-->
        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:text="@string/milk_prompt"
            android:textStyle="bold"

            android:layout_marginTop="27dp"

            android:id="@+id/textView"
             />

        <!-- android:layout_height="wrap_content"

            android:layout_marginLeft="20dp"

            android:layout_marginStart="55dp"

            android:textSize="16sp"-->




        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:entries="@array/milk_type" />


        <Button
            android:id="@+id/register"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal|center"
            android:layout_margin="25dp"

            android:background="#006699"
            android:text="@string/register"
            android:textColor="#fff"
            android:textSize="30sp"
            android:textStyle="normal"

            android:visibility="visible" />


    </LinearLayout>




</android.support.constraint.ConstraintLayout>
