<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="in.boshanam.diarymgmt.FarmerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="3dp"
        android:paddingTop="5dp"
        android:theme="@style/AppTheme"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/farmer_loadingProgressPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true" />
        </RelativeLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_farmer_id"
            style="@style/formFieldsVerticalFlowStyle"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/farmerId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/farmer_id"
                android:inputType="number"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_farmer_name"
            style="@style/formFieldsVerticalFlowStyle">

            <EditText
                android:id="@+id/farmerName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/farmer_name"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/milkType"
            style="@style/formFieldsVerticalFlowStyle"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:entries="@array/milk_type" />

        <Button
            android:id="@+id/register"
            style="@style/formButtonStyle"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:text="@string/register" />

        <de.codecrafters.tableview.SortableTableView
            xmlns:table="http://schemas.android.com/apk/res-auto"
            android:id="@+id/farmerListingTableView"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            table:tableView_headerColor="@color/colorPrimary"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
